--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 boto3==1.28.62
-botocore==1.31.62
 certifi==2023.7.22
 charset-normalizer==3.3.0
 feedparser==6.0.10
@@ -10,4 +9,4 @@ requests==2.31.0
 s3transfer==0.7.0
 sgmllib3k==1.0.0
 six==1.16.0
-urllib3==2.0.6
+urllib3
