--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ venv/
 .env
 /package/
 .aws_sam/
+.DS_Store
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/osx,linux,python,windows,pycharm,visualstudiocode,sam
